--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,7 +12,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.1.3",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^3.3.0"
   },
   "devDependencies": {},
   "scripts": {
